# Visva-Mitra

./: .gitignore  JustFile  README.md
mcp/: app.py  arithmetic_server.py  client.py  infoc.py  pyproject.toml  weather_server.py
mcp/templates/: chat.html  index.html
universal_assistant/: Dockerfile.strings  README.md  docker-compose.yml  main_workflow.py  pyproject.toml  strings_server.py
universal_assistant/client/: Dockerfile  client_gui.py  client_tui.py  pyproject.toml
universal_assistant/client/static/css/: styles.css
universal_assistant/client/static/js/: script.js
universal_assistant/client/templates/: chat.html
universal_assistant/client/transcriber/: .dockerignore  Dockerfile  models.py  pyproject.toml  speak.py  start.sh  transcriber.py
universal_assistant/mk_docs/: mkdocs.yml  pyproject.toml
universal_assistant/mk_docs/docs/: about.md  architecture.md  index.md  introduction.md  setup.md
universal_assistant/servers/computer_control/: README.md  control.py  pyproject.toml
universal_assistant/servers/math_server/: Dockerfile  __init__.py  build.sh  main.py
universal_assistant/servers/process_server/: Dockerfile  __init__.py  main.py  pyproject.toml
universal_assistant/servers/string_server/: Dockerfile  __init__.py  main.py
universal_assistant/servers/weather_server/: Dockerfile  __init__.py  main.py
universal_assistant/templates/: test.html
universal_assistant/test/: text.txt
