[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-google-genai>=2.1.2",
    "langchain-mcp-adapters>=0.0.8",
    "langchain-ollama>=0.3.1",
    "langgraph>=0.3.30",
    "mcp[cli]>=1.6.0",
    "mlflow>=2.21.3",
]
