[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "langchain-google-genai>=2.1.3",
    "langchain-mcp-adapters>=0.0.9",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.3.31",
    "mcp[cli]>=1.6.0",
    "mlflow>=2.21.3",
    "prefect>=3.3.5",
]

[tool.uv.workspace]
members = ["mk_docs"]
