[project]
name = "computer-control"
version = "0.1.0"
description = "MCP server for browser control, camera capture, screenshots, and system monitoring"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.2.0",
    "playwright>=1.50.0",
    "opencv-python>=4.8.0",
    "psutil>=5.9.0",
    "pyautogui>=0.9.54",
    "httpx>=0.28.1",
    "ruff>=0.9.7",
    "pyscreeze>=1.0.1",
    "pillow>=11.3.0",
]

